# pb-fbx-conv

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
assets/: DungeonCrawl_Well.fbx
lib/windows/: tag
src/: args.cpp  args.h  convertfbx.cpp  convertfbx.h  convertobj.cpp  convertobj.h  dumpfbx.cpp  dumpfbx.h  main.cpp  mathutil.h  model.h  ofbx.cpp  ofbx.h  types.h  writep3db.cpp  writep3db.h
src/json/: JSONWriter.h  UBJSON.h
